--- a/src/web/GAMBIT/index.html
+++ b/src/web/GAMBIT/index.html
@@ -1,3 +1,10 @@
-SIMCAP | GAMBIT
-
-Gyroscope Accelerometer Magnetometer Baseline Inferrence Telemetry
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>SIMCAP | GAMBIT</title>
+    </head>
+    <body>
+        <h1>SIMCAP | GAMBIT</h1>
+        <p>Gyroscope Accelerometer Magnetometer Baseline Inferrence Telemetry</p>
+    </body>
+</html>
