--- a/src/web/GAMBIT/index.html
+++ b/src/web/GAMBIT/index.html
@@ -14,7 +14,10 @@
         <p>Gyroscope Accelerometer Magnetometer Baseline Inferrence Telemetry</p>
         <button id="connect">Connect</button>
 
-        <div id="log"></div>
+        <code>
+            <pre id="log"></pre>
+        </code>
+
         <script>
 
             function updateConnectionStatus(connected, data) {
@@ -34,6 +37,7 @@
             function onLine(data) {
                 // CSV data is received here
                 console.log("DATA:", data)
+                window.log.innerHTML += data
             }
 
             function init() {
@@ -53,8 +57,6 @@
                                 i = buf.indexOf("\n");
                             }
                         });
-
-                        connection.write("\x10getData()\n");
                     }
                 })
             }
@@ -62,8 +64,6 @@
             window.connect.onclick = function() {
                  init()
             }
-
-            init()
             
         </script>
     </body>
