--- a/src/web/GAMBIT/index.html
+++ b/src/web/GAMBIT/index.html
@@ -22,6 +22,17 @@
                 padding: 0.3em;
             }
 
+            .grad {
+                background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+                background-size: 400% 400%;
+                animation: gradient 15s ease infinite;
+                overflow: visible;
+                margin-bottom: 2rem !important;
+                background-clip: text;
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+            }
+
             button {
                 background-color: white;
                 color: black;
@@ -30,6 +41,14 @@
                 border: 0 none;
                 cursor: pointer;
                 font-size: 1.2em;
+            }
+
+            h1 {
+                font-weight: normal;
+            }
+
+            h1 .grad {
+                font-weight: bold;
             }
 
             button[disabled] {
@@ -42,6 +61,7 @@
                 display: flex;
                 flex-direction: column;
                 margin-top: 1em;
+                font-size: 1.3em;
             }
 
             .dataView > div {
@@ -61,7 +81,7 @@
         </style>
     </head>
     <body>
-        <h1>SIMCAP | GAMBIT</h1>
+        <h1>SIMCAP | <span class="grad">GAMBIT</span></h1>
         <p>Gyroscope Accelerometer Magnetometer Baseline Inferrence Telemetry</p>
         <button id="connect">Connect</button> <button disabled id="getdata">Get data</button>
 
