--- a/src/web/GAMBIT/index.html
+++ b/src/web/GAMBIT/index.html
@@ -33,6 +33,18 @@
                 -webkit-text-fill-color: transparent;
             }
 
+            @keyframes gradient {
+                0% {
+                    background-position: 0% 50%;
+                }
+                50% {
+                    background-position: 100% 50%;
+                }
+                100% {
+                    background-position: 0% 50%;
+                }
+            }
+
             button {
                 background-color: white;
                 color: black;
