--- a/src/web/GAMBIT/index.html
+++ b/src/web/GAMBIT/index.html
@@ -27,7 +27,6 @@
                 background-size: 400% 400%;
                 animation: gradient 15s ease infinite;
                 overflow: visible;
-                margin-bottom: 2rem !important;
                 background-clip: text;
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
@@ -61,11 +60,21 @@
             }
 
             h1 {
+                font-size: 1.2em;
+                line-height: 1;
+                margin-bottom: 0;
                 font-weight: normal;
+                letter-spacing: 0.35em;
             }
 
             h1 .grad {
                 font-weight: bold;
+                display: block;
+                font-size: 2.5em;
+            }
+
+            .subtitle {
+                font-style: italic;
             }
 
             button[disabled] {
@@ -98,8 +107,8 @@
         </style>
     </head>
     <body>
-        <h1>SIMCAP | <span class="grad">GAMBIT</span></h1>
-        <p>Gyroscope Accelerometer Magnetometer Baseline Inferrence Telemetry</p>
+        <h1>- SIMCAP -<span class="grad">GAMBIT</span></h1>
+        <p class="subtitle">Gyroscope Accelerometer Magnetometer Baseline Inferrence Telemetry</p>
         
         <div class="buttons">
             <button id="connect">Connect</button> <button disabled id="getdata">Get data</button>
