--- a/src/web/GAMBIT/index.html
+++ b/src/web/GAMBIT/index.html
@@ -16,10 +16,16 @@
                 background-color: black;
                 color: white;
                 text-align: center;
+                height: 100%;
             }
 
             body {
                 padding: 0.3em;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-evenly;
+                height: 100%;
+                box-sizing: border-box;
             }
 
             .grad {
