update token input if loaded from local storage

--- a/src/web/GAMBIT/index.html
+++ b/src/web/GAMBIT/index.html
@@ -459,7 +459,10 @@
 
             try {
                 const t = localStorage.getItem("ghToken")
-                if (t) ghToken = t
+                if (t) {
+                    ghToken = t
+                    window.token.value = t
+                }
                 else console.log("No ghToken in localStorage")
             } catch(e) {
                 console.log("Error getting token from localStorage")
